--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,338 @@
-.App {
+*{
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
+
+  @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@100;300;400;500;700;800;900&display=swap');
+
+.container{
+  max-width: 1580px;
+  margin: 0 auto;
+  font-family: 'M PLUS 1p', sans-serif;
+}
+header{
+  padding: 23px 0px;
+  
+  
+}
+
+.header_start{
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  backdrop-filter: blur(10px);
+  max-width: 1580px;
+  width: 100%;
+}
+.header_start h2{
+  font-size: 34px;
+}
+.navbar ul {
+  display: flex;
+  gap: 60px;
+ 
+}
+
+.navbar a{
+  color: black;
+  font-size: 23px;
+  border: 2px solid transparent;
+  padding: 4px 3px 4px 3px;
+  border-radius: 4px;
+}
+/* .navbar a:hover{
+  border: 2px solid rgb(100, 199, 242);
+} */
+.hero-section{
+  display: flex; 
+  gap: 50px;
+  
+}
+.text-hero{
+  max-width: 1110px;
+  width: 100%;
+  padding-bottom: 45px;
+}
+.text-hero h1 {
+  font-size: 5rem ;
+}
+.text-hero p {
+  max-width: 830px ;
+  width: 100%;
+  font-weight: 400;
+  color:rgb(184, 167, 42);
+  font-size: 24px;
+}
+.section_1{
+  margin-top: 110px;
+}
+.location-image{
+  max-width: 40px;
+  width: 100%;
+}
+.location-image:hover{
+  scale: 1.2;
+  transition: 0.5s ease-in-out;
+}
+.address-img{
+  display: flex;
+  max-width: 300px;
+  width: 100%;
+  gap: 30px;
+}
+.contact-list{
+  display: flex;
+  max-width: 300px;
+  width: 100%;
+  gap: 30px;
+}
+.contact-list img {
+  border-radius: 50px;
+}
+
+.contact-img{
+  max-width: 60px;
+}
+.image-part img {
+    max-width: 1000px;
+    width: 100%;
+}
+.image-part{
+  overflow: hidden;
+  border-radius: 50px 2px;
+}
+.image-part img:hover {
+  scale: 1.2;
+  transition: 0.6s ease-in-out;
+}
+.address{
+  display: flex;
+  flex-direction: column;
+  gap: 23px;
+}
+
+/* ===================cool-link */
+li {
+  margin-bottom: 10px;
+}
+
+.cool-link {
+  display: inline-block;
+  color: #000;
+  text-decoration: none;
+}
+
+.cool-link::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #000;
+  transition: width .3s;
+}
+
+.cool-link:hover::after {
+  width: 100%;
+  /* transition: width .3s; */
+}
+/* ===================cool-link */
+
+
+/* ================================================= about */
+.section_2{
+  
+  padding:100px 0px 50px 0px ;
+}
+.about-me-text{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.about-me{
+  display: flex;
+  /* gap: 50px; */
+  margin: 100px 0px;
+  justify-content: space-between;
+
+}
+.about-image img {
+  max-width: 700px;
+  width: 100%;
+  transform: rotateY(338deg);
+  border-radius: 5px 50px; 
+}
+.intro-p{
+  max-width: 700px;
+  width: 100%;
+  font-size: 23px;
+}
+/* =====================================================skills */
+
+.section_3{
+  margin: 25px 0px;
+}
+
+.skills{
+  text-align: center;
+  padding: 23px 0px;
+  font-size: 23px;
+}
+.skills h2{
+  padding-bottom: 34px;
+}
+.grid-item img{
+  max-width: 200px;
+  width: 100%;
+}
+.grid-skills{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  row-gap: 43px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* ================================== contact  */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.contact-section{
   display: flex;
   flex-direction: column;
+  gap: 30px;
+}
+.text-contact{
+  max-width: 735px;
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 23px;
+}
+.section_4{
+  margin: 100px 0px ;
+}
+.message-phone{
+  max-width: 40px;
+  width: 100% ;
+}
+
+.message-phone:hover{
+  scale: 1.2;
+  transition: 0.5s ease-in-out;
+}
+
+.message-img-part ul li {
+  display: flex;
+  gap: 12px;
+}
+.message-img-part ul{
+  display: flex;
+  flex-direction: column;
+  gap: 23px;
+  max-width: 500px;
+  margin: 0 auto;
   align-items: center;
+}
+
+.contact-last{
+  text-align: center;
+}
+
+.contact-last h3{
+  padding-bottom: 22px;
+}
+
+.grid-item img{
+   max-width: 100px;
+   width: 100%;
+}
+
+.grid-item img:hover{
+  scale: 1.2;
+  transition: 0.5s ease-in-out;
+}
+
+.twiter{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 12px;
 }
 
-.App-link {
-  color: #61dafb;
+.twiter img{
+  max-width: 50px;
+  width: 100%;
+  border-radius: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.twiter img:hover{
+  scale: 1.2;
+  transition: 0.5s ease-in-out;
 }
+
+/* ======================button hover effact */
+.outer {
+  margin: 50px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+ 
+}
+
+.button {
+  border: 1px solid black;
+  border-radius: 8px;
+  /* width: 100px;
+  height: 30px; */
+  max-width: 200px;
+  width: 100%;
+  display: block;
+  padding: 5px 5px 5px 5px ;
+
+  background: linear-gradient(to right, black 50%, white 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all .5s ease-out;
+}
+
+.button:hover {
+  background-position: left bottom;
+}
+
+.text-num1 {
+  text-align: center;
+  font-size: 26px;
+  line-height: 30px; 
+  color: black;
+  transition: all .6s ease-out;
+  display: block;
+}
+
+.text-num1:hover {
+  color: white;  
+}
+
+/* ======================button hover effact */
+
+
+/* ==========================================================footer */
+
+.last-footer-text{
+  text-align: center;
+  background-color: azure;
+  padding: 30px 0px ;
+}
+
+/* ===================main css  */
+ 
+ main{
+  background-image: url(../src/components/image/background-image.jpg);
+  overflow: hidden;
+  object-fit: cover;
+  
+ }
+
+/* ========main */
